Fix overflow

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ html {
 
 body {
   margin: 0;
+  overflow: auto;
 }
 
 /* Header Styles */
